Fix styles and checkVisibility of prev/next

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3371,6 +3371,9 @@ input, select, textarea {
 		left: 50%;
 		transform: translateX(-50%);
 		z-index: 999;
+	}
+	
+	#run .button, #prev-next .button {
 		background-color: #fff;
 	}
 	
